import java.time.Instant

buildscript {
    repositories {
        mavenCentral()
    }
}

plugins {
    id 'org.springframework.boot' version '1.5.21.RELEASE'
    id "org.flywaydb.flyway" version "4.1.2"
    id "org.sonarqube" version "2.7"
    id 'com.avast.gradle.docker-compose' version '0.8.10'
    id "com.moowork.node" version "1.2.0"
}

apply plugin: 'java'
apply plugin: 'idea'
apply plugin: 'checkstyle'
apply plugin: 'jacoco'
apply plugin: 'pmd'

group = serviceGroup
version = serviceVersion
archivesBaseName = serviceName
project.ext.buildTime = Instant.now().toString() // for versioning
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
    jcenter()
    maven { url "http://jaspersoft.artifactoryonline.com/jaspersoft/third-party-ce-artifacts/" }
    maven { url "http://jasperreports.sourceforge.net/maven2/" }
}

dependencies {
    compile project(':referencedata')
    compile project(':stockmanagement')
    compile project(':requisition')
    compile project(':fulfillment')

    compile "org.springframework.boot:spring-boot-starter-web"
    compile "org.springframework.boot:spring-boot-starter-data-rest"
    compile "org.springframework.boot:spring-boot-starter-data-jpa"
    compile "org.springframework.boot:spring-boot-starter-actuator"
    compile "org.springframework.boot:spring-boot-starter-security"
    compile "org.springframework.security.oauth:spring-security-oauth2"
    compile 'org.springframework:spring-context-support'
    compile 'org.hibernate:hibernate-java8'
    compile group: 'net.sf.ehcache', name: 'ehcache', version: '2.4.3'
    compile group: 'org.hibernate', name: 'hibernate-ehcache', version: '5.0.12.Final'
    compile 'org.flywaydb:flyway-core:4.1.2'
    compile 'org.springframework.boot:spring-boot-starter-data-redis:1.5.21.RELEASE'
    compile 'org.openlmis:openlmis-service-util:3.0.0'
    compile 'org.jadira.usertype:usertype.core:5.0.0.GA'
    compile "org.projectlombok:lombok:1.16.8"
    compile "org.postgresql:postgresql:42.0.0"
    compile "com.google.guava:guava:18.0"
    compile 'org.webjars.npm:api-console:3.0.17'
    compile 'org.apache.commons:commons-lang3:3.6'
    compile 'org.apache.commons:commons-csv:1.4'
    compile 'org.apache.commons:commons-collections4:4.1'
    compile 'commons-io:commons-io:2.5'
    compile "com.fasterxml.jackson.datatype:jackson-datatype-jsr310"
    compile "net.sf.jasperreports:jasperreports:6.3.0"
    compile "org.slf4j:slf4j-ext:1.7.25"
    compile "com.github.tomakehurst:wiremock:1.58"
    compile 'org.openlmis:openlmis-service-util:3.1.0'
    compile 'org.apache.camel:camel-core:2.18.0'

    compileTestJava.dependsOn tasks.getByPath(':stockmanagement:testClasses')
    compileTestJava.dependsOn tasks.getByPath(':requisition:testClasses')
    testCompile project(':stockmanagement').sourceSets.test.output
    testCompile project(':requisition').sourceSets.test.output

    testCompile "junit:junit"
    testCompile "org.mockito:mockito-core:1.10.19"
    testCompile "org.powermock:powermock-api-mockito:1.6.5"
    testCompile "org.powermock:powermock-module-junit4:1.6.5"
    testCompile "org.springframework.boot:spring-boot-starter-test"
    testCompile 'org.flywaydb.flyway-test-extensions:flyway-spring-test:4.1.0'
    testCompile 'org.springframework.security:spring-security-test'
    testCompile "org.springframework:spring-test"
    testCompile "com.jayway.restassured:rest-assured:2.7.0"
    testCompile "guru.nidi.raml:raml-tester:0.8.9"
    testCompile "nl.jqno.equalsverifier:equalsverifier:2.4"
    testCompile "be.joengenduvel.java.verifiers:to-string:1.0.2"
}

/*
 * Configures system and environment variables, for the given task, when said task is started
 * with docker-compose plugin providing services.
 */
ext.configureForDockerCompose = { task ->
    // source .env file for postgres username and password
    def envProps = new Properties()
    file('.env').withInputStream{ it -> envProps.load(it) }
    def postgresUser = envProps.getProperty('POSTGRES_USER')
    def postgresPass = envProps.getProperty('POSTGRES_PASSWORD')
    task.environment "POSTGRES_USER", postgresUser
    task.environment "POSTGRES_PASSWORD", postgresPass

    // source log host and port from docker compose
    def log = dockerCompose.servicesInfos.log.firstContainer
    task.systemProperty 'log.host', log.host
    task.systemProperty 'log.port', 514
    //task.systemProperty 'log.port', log.ports[514] this doesn't work yet https://github.com/avast/gradle-docker-compose-plugin/issues/176

    // source postgres host and port from docker compose
    def db = dockerCompose.servicesInfos.db.firstContainer
    task.environment "DATABASE_URL", "jdbc:postgresql://${db.host}:${db.port}/open_lmis"
}

/*
 * Checking for docker is a proxy for determining if docker-compose should be used
 * to start needed services
 */
ext.checkForDocker = { ->
    def result = exec {
        def command = "command -v docker"
        ignoreExitValue = true
        executable "bash" args "-l", "-c", command
    }
    if (0 == result.getExitValue()) {
        println "has Docker"
        return true
    } else {
        println "Docker not found"
        return false
    }
}

dockerCompose {
    stopContainers = true
}

tasks.withType(Test) {
    environment 'BASE_URL', "http://localhost"
}

// Usage: gradle generateMigration [-PmigrationName=name_of_migration]
//          Defaults to 'migration' as migration name
// Example: gradle generateMigration -PmigrationName=add_column_to_users
//          Will create a file in migration folder with name yyyyMMddHHmmssSSS_add_column_to_users.sql.
task generateMigration << {
    description 'Creates an empty new file within the src/main/resources/db/migration directory into which developers can add new SQL migration code.'
    def fileName = project.hasProperty('migrationName') ? migrationName : 'migration'
    def timestamp = new Date().format('yyyyMMddHHmmssSSS', TimeZone.getTimeZone('GMT'))
    def fullFileName = "${timestamp}__${fileName}.sql"
    def migrationFile = new File(sourceSets.main.resources.srcDirs.first(), 'db/migration/' + fullFileName)
    migrationFile << "-- WHEN COMMITTING OR REVIEWING THIS FILE: Make sure that the timestamp in the file name (that serves as a version) is the latest timestamp, and that no new migration have been added in the meanwhile.\n"
    migrationFile << "-- Adding migrations out of order may cause this migration to never execute or behave in an unexpected way.\n"
    migrationFile << "-- Migrations should NOT BE EDITED. Add a new migration to apply changes."
    migrationFile.createNewFile()
}

task checkApiIsRaml(type: Exec) {
    executable "raml-cop"
    args "src/main/resources/api-definition.yaml"
}

configure(checkApiIsRaml) {
    group = JavaBasePlugin.VERIFICATION_GROUP
    description = 'Verify that the api-specification is valid RAML'
}

jacocoTestReport {
    group = "reporting"
    description = "Generate Jacoco coverage reports after running tests."
    reports {
        xml.enabled false
        html.enabled true
        csv.enabled false
    }
    additionalSourceDirs = files(sourceSets.main.allJava.srcDirs)
    afterEvaluate {
        classDirectories = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'org/siglus/siglusapi/*.class',
                    'org/siglus/siglusapi/constant',
                    'org/siglus/siglusapi/i18n',
                    'org/siglus/siglusapi/service/client',
                    'org/siglus/siglusapi/domain',
                    'org/siglus/siglusapi/dto',
                    'org/siglus/siglusapi/repository'
            ])
        })
    }
}

jacocoTestCoverageVerification {
    afterEvaluate {
        classDirectories = files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'org/siglus/siglusapi/*.class',
                    'org/siglus/siglusapi/constant',
                    'org/siglus/siglusapi/i18n',
                    'org/siglus/siglusapi/service/client',
                    'org/siglus/siglusapi/domain',
                    'org/siglus/siglusapi/dto',
                    'org/siglus/siglusapi/repository'
            ])
        })
    }
    violationRules {
        rule {
            limit {
                counter = 'LINE'
                value = 'COVEREDRATIO'
                minimum = 0.87
            }
        }
    }
}

check {
    dependsOn jacocoTestCoverageVerification
}

checkstyle {
    toolVersion = "8.12"
}

pmd {
    toolVersion = '5.4.0'
    consoleOutput = true
    ignoreFailures = false
    ruleSetFiles = files("config/pmd/ruleset.xml")
    reportsDir = file("build/reports/pmd")
}

tasks.withType(Pmd) {
    reports {
        xml.enabled true
        html.enabled true
    }
}

apply from: "documentation.gradle"

processResources {
    finalizedBy npm_run_runApiHtmlConverter
    filesMatching('**/version.properties') {
        expand(project.properties)
    }
}

apply from: "registration.gradle"

assemble {
    dependsOn npm_run_runApiHtmlConverter
    dependsOn copyConsulRegistrationToBuild
    dependsOn jacocoTestReport
}
